# MicroViper-Verifier

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/01-using-viper/: 02-1.test.vpr  09-maxsum.vpr  10-unsound.vpr
examples/03-bonus/: bool_fail-false.vpr  bool_fail-true.vpr
examples/04-custom/: complex-false.vpr  complex-no-ensures-true.vpr  complex-true.vpr  contr-assume-false.vpr  core1-true.vpr  core2-01-false.vpr  core2-02-false.vpr  core2-03-false.vpr  core3-true.vpr  extension1-true.vpr  fresh-assign-false.vpr  fresh-assign-true.vpr  functions.vpr  mult-errors-false.vpr  recursive-bodies-false.vpr  recursive-bodies-true.vpr  recursive-method-false.vpr  recursive-method-true.vpr  sync-after-body-true.vpr
fsharp/: .gitignore  AST.fs  Lexer.fsl  Parser.fsy  Program.fs  Semantics.fs  micro-viper.fsproj
fsharp/examples/03-bonus/: expr.vpr
rust/: .gitignore
rust/.devcontainer/: Dockerfile
rust/examples/01-using-viper/: 04-triple.vpr  05-max.vpr
rust/syntax/src/: lib.rs  parse.rs  parser.lalrpop  sem.rs
src/: main.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  ast_ext.rs  core_1.rs  ivl0.rs  ivl1.rs  ivl2.rs  ivl3.rs  lib.rs  sem.rs  transform_to_z3.rs
test/: test.py
