[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
miette = { version = "5.10.0", features = ["fancy"] }
once_cell = "1.18.0"
regex = "1.9.5"
thiserror = "1.0.48"
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }
